# GIS-Python-programming

./: README.MD  pyproject.toml
Geometries01/: README.md  geometries.py
Geometries01/Assets/: LeasesData.txt
Geometries02/: README.md  geometries.py
Geometries02/Assets/: CO_Boundary.shp.xml  Cities.shp.xml
Geometries03/: README.md  geometries.py  geometryMode.py
Geometries03/Assets/: WellPaths.txt
Geoprocessing_using_python/: README.md  geoprocessing.py
Geoprocessing_using_python/Assets/Lesson3_Data/: WellsSubset.sbn  WellsSubset.sbx  WellsSubset.shp  WellsSubset.shp.xml  WellsSubset.shx
Manupulating_Spatial_Data/: README.md  manupulating_data.py
Manupulating_Spatial_Data/Assets/Lesson5_Data/: COUNTIES.shp.xml  Colorado_cities.dbf  Colorado_cities.shp  Colorado_cities.shp.xml  Colorado_cities.shx  Jefferson.shp.xml  Wells.shp  Wells.shp.xml  Wells.shx
Maps/: README.md  mapDocument.py
Maps/Assets/Lesson8_Data/: COUNTIES.shp.xml  CO_Boundary.shp.xml  Cities.shp.xml  Jefferson.shp.xml  NAD83.shp.xml
Maps/Assets/Lesson8_Data/Practice2/: Colorado.mxd  Colorado1.mxd
Maps/Assets/Lesson8_Data/Practice5/: Colorado.mxd  Colorado1.mxd
Maps/Assets/Lesson8_Data/Practice5/Practice5.gdb/: a00000005.CatItemTypesByName.atx  a00000005.CatItemTypesByParentTypeID.atx  a00000005.CatItemTypesByUUID.atx  a00000005.gdbtable  a00000005.gdbtablx  a00000007.CatRelTypesByBackwardLabel.atx  a00000007.CatRelTypesByDestItemTypeID.atx  a00000007.CatRelTypesByForwardLabel.atx  a00000007.gdbtable  (+5 more)
Maps01.py/: README.md  mapDocument.py
Raster-maupulation/: README.md  raster.py
(+21 files in other folders)
