[tool.poetry]
name = "gis-python-programming"
version = "0.1.0"
description = ""
authors = ["Daviey52 <davidkariska@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gis = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
